# Qumpel

./: pyproject.toml
manager/: __init__.py  main.py  meta_data.py  move_files.py  new_folder_setup.py
